--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="fff-ban" src="https://fasc.com.vn/upload/slideshow/2025/06/25/13/47/04/banner2-25062025134642.jpg?v=1" />
         <div class="container-fluid pr-4 pl-4">
             <div class="row">
-                <div class="col-3"><img src="/logo.png" class="img-fluid" /></div>
+                <div class="col-3"><img src="/logo.png?v=1" class="img-fluid" /></div>
                 <div class="col-9">
                     <div class="flex-center">
                         <div class="flex-center-div">
