--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banner Zalo</title>
     <link href="/Content/bootstrap.min.css?v=2" rel="stylesheet" />
     <link href="/Content/site.css?v=2" rel="stylesheet" />
@@ -11,19 +12,19 @@
         <img class="fff-ban" src="https://fasc.com.vn/upload/slideshow/2025/06/25/13/47/04/banner2-25062025134642.jpg?v=1" />
         <div class="container-fluid pr-4 pl-4">
             <div class="row">
-                <div class="col-3"><img src="/logo.png?v=1" class="img-fluid" /></div>
-                <div class="col-9">
+                <div class="col-md-3 col-12 form-group"><img src="/logo.png?v=1" class="img-fluid" /></div>
+                <div class="col-12 col-md-9 form-group">
                     <div class="flex-center">
                         <div class="flex-center-div">
-                            <h1 class="h3-ttnews mb-2">DỊCH VỤ TƯ VẤN KẾ TOÁN, THUẾ VÀ TÀI CHÍNH FASC</h1>
+                            <h1 class="h3-ttnews mb-2 text-md-left text-center mb-3 mb-md-0">DỊCH VỤ TƯ VẤN KẾ TOÁN, THUẾ VÀ TÀI CHÍNH FASC</h1>
                             <div class="row">
-                                <div class="col-6">
+                                <div class="col-md-6 col-12 mb-2">
                                     <ul class="no-ul">
                                         <li class="news-detail mb-1"><i class="fa fa-map-marker text-p mr-2"></i>34 Trần Mai Ninh, Phường 12, Quận Tân Bình, Tp Hồ Chí Minh</li>
                                         <li class="news-detail"><i class="fa fa-globe text-p mr-2"></i>fasc.com.vn</li>
                                     </ul>
                                 </div>
-                                <div class="col-6">
+                                <div class="col-md-6 col-12">
                                     <ul class="no-ul">
                                         <li class="news-detail mb-1"><i class="fa fa-phone text-p mr-2"></i>0903.937.750 (Ms Nga)</li>
                                         <li class="news-detail"><i class="fa fa-phone text-p mr-2"></i>0933.361.096 (Ms Huệ)</li>
@@ -34,9 +35,9 @@
                     </div>
                 </div>
             </div>
-            <hr class="d-split"/>
+            <hr class="d-split mt-3 mt-md-0"/>
             <div class="text-center">
-                <h2 class="h3-ttnews" style="font-size:2.6em;">FASC CUNG CẤP GIẢI PHÁP TOÀN DIỆN CHO DOANH NGHIỆP CỦA BẠN </h2>
+                <h2 class="h3-ttnews">FASC CUNG CẤP GIẢI PHÁP TOÀN DIỆN CHO DOANH NGHIỆP CỦA BẠN </h2>
             </div>
             <div class="row">
                 <div class="col-lg-3 col-sm-6 col-12 mb-3">
@@ -154,7 +155,7 @@
         </div>
     </div>
     <!-- ====== NÚT TẢI PNG bằng html2canvas ====== -->
-<!--<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script>
 async function exportPNG(){
 const el = document.getElementById('banner');
@@ -184,6 +185,6 @@ Object.assign(btn.style,{position:'fixed', right:'16px', bottom:'16px', padding:
 btn.onclick = exportPNG;
 document.body.appendChild(btn);
 }
-</script>-->
+</script>
 </body>
 </html>
