--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banner Zalo</title>
     <link href="Content/bootstrap.min.css?v=2" rel="stylesheet" />
-    <link href="Content/site.css?v=2" rel="stylesheet" />
+    <link href="Content/Site.css?v=2" rel="stylesheet" />
     <link href="font-awesome/font-awesome-4.3.0/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
