--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="fff-ban" src="https://fasc.com.vn/upload/slideshow/2025/06/25/13/47/04/banner2-25062025134642.jpg?v=1" />
         <div class="container-fluid pr-3 pl-3">
             <div class="row">
-                <div class="col-md-3 col-4 form-group"><img src="/logo.png?v=1" class="img-fluid" /></div>
+                <div class="col-md-3 col-4 form-group"><img src="logo.png?v=1" class="img-fluid" /></div>
                 <div class="col-8 col-md-9 form-group">
                     <div class="flex-center">
                         <div class="flex-center-div">
